Minor improvements to leverage Java 17 (#391)